# vsot

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docker/: Dockerfile.antlr
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
html_formatter/: __init__.py  assertions.py  cli.py  constants.py  html_formatter.py  parser.py  printer.py  settings.py  utils.py  vsot.py
html_formatter/antlr/: HTMLLexer.g4  HTMLLexer.interp  HTMLLexer.py  HTMLParser.g4  HTMLParser.interp  HTMLParser.py  HTMLParser.tokens  HTMLParserVisitor.py
html_formatter/antlr/.antlr/: HTMLLexer.interp  HTMLLexer.java  HTMLLexer.tokens  HTMLParser.interp  HTMLParser.java
tests/: __init__.py  test_cli.py  test_formatter.py  test_html_formatter.py
tests/data/: 01_general.input.html  01_general.output.html  02_base_template.input.html  02_base_template.output.html  03_jinja_comments.input.html  03_jinja_comments.output.html
vsot/: __init__.py  cli.py  constants.py  exceptions.py  printer.py  settings.py
vsot/antlr/: HTMLLexer.interp  HTMLLexer.py  HTMLParser.interp  HTMLParser.py  HTMLParser.tokens  HTMLParserVisitor.py
