[tool]
[tool.poetry]
name = "html_formatter"
version = "0.1.0"
description = "Experimental HTML formatter"
license = "MIT license"
keywords = ["html_formatter"]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8"]
homepage = "https://github.com/benhowes/html_formatter"
authors = ["Ben Howes <ben@ben-howes.co.uk>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.6"
click = ">=7.0"
antlr4-python3-runtime = "^4.8"

[tool.poetry.dev-dependencies]
bump2version = "==0.5.11"
watchdog = "==0.9.0"
flake8 = "==3.7.8"
tox = "==3.14.0"
coverage = "*"
Sphinx = "==1.8.5"
pytest = "5"
