[tool]
[tool.poetry]
name = "vsot"
version = "0.1.4"
description = "VSOT - Django/jinja template formatter"
license = "MIT license"
keywords = ["vsot"]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8"]
homepage = "https://github.com/benhowes/vsot"
authors = ["Ben Howes <ben@ben-howes.co.uk>"]
readme = "README.rst"

[tool.poetry.scripts]
vsot = "vsot.cli:main"

[tool.poetry.dependencies]
python = ">=3.6.1"
click = ">=7.0"
antlr4-python3-runtime = "==4.8"
pathspec = "^0.8.0"
dataclasses = { version = ">=0.6", python = "<3.7" }

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
black = "^19.10b0"
isort = "^4.3.21"
bump2version = "==1.0.0"
watchdog = "==0.10.2"
flake8 = "==3.7.9"
tox = "==3.14.6"
coverage = "*"
Sphinx = "==3.0.2"
pytest = "5.4.1"
ipdb = "^0.13.2"
readme_renderer = "^25.0"


[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup
  | vsot/antlr
)/
'''

[tool.vsot]
indent_size = 2
